@@ -1,6 +1,6 @@
 GoogleTransitDataFeed transxchange2GoogleTransit
 
-Copyright 2007, 2008, 2009, 2010, 2011 GoogleTransitDataFeed
+Copyright 2007, 2008, 2009, 2010, 2011, 2012 GoogleTransitDataFeed
 
 This product includes software developed by:
 The Apache Software Foundation (http://www.apache.org/)
@@ -14,6 +14,7 @@ v1.7.4:
 
 *** Improve robustness of stop file read
 
+*** Bugfix dereferencing service IDs for calendar_dates.txt file
 
 --------------------------------------------------------------
 v1.7.3:
